Add query test suites implementation
