# api/data/v1/data.pb.validate.go
@@ -890,8 +890,39 @@ func (m *QueryTestSuitesRequest) validate(all bool) error {
 
 	var errors []error
 
+	if len(m.GetIds()) > 0 {
+
+		for idx, item := range m.GetIds() {
+			_, _ = idx, item
+
+			if err := m._validateUuid(item); err != nil {
+				err = QueryTestSuitesRequestValidationError{
+					field:  fmt.Sprintf("Ids[%v]", idx),
+					reason: "value must be a valid UUID",
+					cause:  err,
+				}
+				if !all {
+					return err
+				}
+				errors = append(errors, err)
+			}
+
+		}
+
+	}
+
+	// no validation rules for Labels
+
 	if len(errors) > 0 {
 		return QueryTestSuitesRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+func (m *QueryTestSuitesRequest) _validateUuid(uuid string) error {
+	if matched := _data_uuidPattern.MatchString(uuid); !matched {
+		return errors.New("invalid uuid format")
 	}
 
 	return nil
@@ -991,6 +1022,40 @@ func (m *QueryTestSuitesResponse) validate(all bool) error {
 	}
 
 	var errors []error
+
+	for idx, item := range m.GetTestSuites() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, QueryTestSuitesResponseValidationError{
+						field:  fmt.Sprintf("TestSuites[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, QueryTestSuitesResponseValidationError{
+						field:  fmt.Sprintf("TestSuites[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return QueryTestSuitesResponseValidationError{
+					field:  fmt.Sprintf("TestSuites[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
 
 	if len(errors) > 0 {
 		return QueryTestSuitesResponseMultiError(errors)
